tests/fail/fail_molda_empty.kr
molda Vazio {
}

fn inisiu() {
    mostran("nada");
}
